# printi

./: .gitignore  Pipfile  README.rst  setup.cfg  setup.py
src/printi/: __init__.py  printi.py  test_printi.py
tests/: test_printi.py
