[metadata]
name = printi
version = 0.1.0
author = David Gilbertson
author_email = gilbertson.david@gmail.com
description = Show alternate representations of floats, 💡 0.707106781186 ≈ 1/√2
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
