[metadata]
name = printi-davidgilbertson
version = 0.1.0
author = David Gilbertson
author_email = gilbertson.david@gmail.com
description = Show alternate representations of floats, e.g. -2.4674011002723395 ≈ -π²/4
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/davidgilbertson/printi
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Development Status :: 3 - Alpha
  Intended Audience :: Developers

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
